# test-sandbox

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  conanfile.txt
lib/: CMakeLists.txt
lib/include/lib/: math.hpp
lib/src/: math.cpp
tests/: CMakeLists.txt  catch2_test.cpp  doctest_test.cpp  gtest_test.cpp
tests/lib/: CMakeLists.txt  fizzbuzz_test.cpp  math_test.cpp  test_catch2.cpp  test_doctest.cpp
